--- a/exhibitions.html
+++ b/exhibitions.html
@@ -160,23 +160,29 @@
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="image/jaaulla.avif" alt="thessa"></div>
                         <div class="together"> <a
-                                href="https://www.galaxymacau.com/offers/entertainment/2024-gi-dle-world-tour-idol-macau/">
-                                <h3>2024 (G)I-DLE WORLD TOUR [iDOL] IN MACAU
+                                href="https://www.mgm.mo/en/cotai/entertainment/Fantastic-Art-World-from-CENTRE-POMPIDOU">
+                                <h3>Fantastic Art World from CENTRE POMPIDOU: The Plantamouves
                                 </h3>
-                                <span>📍Galaxy Macau</span>
-                                <p>📅25-27 October 2024</p>
+                                <span>📍MGM Cotai
+                                </span>
+                                <p>📅 July 23rd-October 27th</p>
                             </a>
-                            <p>(G)I-DLE, comprised of MIYEON, MINNIE, SOYEON, YUQI, and SHUHUA, made a
-                                remarkable debut in May 2018 with their hit song "LATATA," quickly gaining acclaim and
-                                winning seven "Best New Artist" awards. Known as one of the most high-profile girl
-                                groups,
-                                they continued their success in 2022 with chart-topping hits like "TOMBOY," "Nxde," and
-                                the
-                                highly addictive "Queencard," which topped global charts.
+                            <p>Artists Clédat & Petitpierre present a workshop exhibition in the form of a
+                                landscape-sculpture in which the moving body becomes the beating heart of the
+                                installation.
+                                This sensory space encourages metamorphosis, play and travel beyond dreams. Children
+                                become the privileged members of a multicoloured, proliferating microcosm: the
+                                Plantamouves. Get into the dance and become a Plantamouve! With the help of
+                                choreographic tutorials, the public is invited to move, dance and reinvent movements
+                                based
+                                on many wearable extensions of the body. Come together and play a role in this strange
+                                ballet with a constellation of hybrid characters where movement is used to feed and
+                                activate
+                                the wonderful world of Plantamouves
                             </p>
                         </div>
                         <div class="hotel_btn">
-                            <a href="https://www.galaxymacau.com/offers/entertainment/2024-gi-dle-world-tour-idol-macau/"
+                            <a href="https://www.mgm.mo/en/cotai/entertainment/Fantastic-Art-World-from-CENTRE-POMPIDOU"
                                 class="button_main">Buy Tickets CTA</a>
                         </div>
                     </div>
