--- a/exhibitions.html
+++ b/exhibitions.html
@@ -190,20 +190,30 @@
                 <div class="col-12">
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="image/pubdistus.webp" alt="thessa"></div>
-                        <div class="together"> <a
-                                href="https://www.klook.com/event-detail/101024001-2024-the-boyz-macau/?spm=Event_Vertical.AllEvent_LIST&clickId=0283573a4f">
-                                <h3>2024 THE BOYZ WORLD TOUR : ZENERATION II in MACAU
+                        <div class="together"> <a href="https://www.mgm.mo/en/cotai/entertainment/giraffe-meets-qilin">
+                                <h3>Monumental Digital Art “Giraffe meets Qilin”
+
                                 </h3>
-                                <span>📍Studio City Event Center</span>
-                                <p>📅31 August-1 September 2024</p>
+                                <span>📍MGM Cotai</span>
+                                <p>📅 Year Round</p>
                             </a>
-                            <p>The boyz world tour visits the Studio City Event Centre and promises to be one of the
-                                most
-                                memorable concerts of the year. Showcasing chart topping hits this show isn't to be
-                                missed.</p>
+                            <p>MGM has been collaborating with Eric Fok since the opening of MGM COTAI and his works
+                                have been collected in MGM Chairman's Collection and displayed in the public space. Eric
+                                Fok excels in using technical pen and paper as tools to create intricate ancient maps,
+                                incorporating contemporary elements to explore the changes brought about by urban
+                                development. The "Giraffe meets Qilin" is Eric Fok's first digital masterpiece,
+                                extending the
+                                innovative concept of "ART-TECH” at MGM. It expands the realm of the public art space,
+                                transforming the Spectacle into a "360-degree art museum" by showcasing the ancient
+                                navigation map on Asia’s largest indoor LED screens. The fusion of antique navigation
+                                map
+                                with iconic architecture immerses the audience in a mesmerizing journey of cultural
+                                exchange between East and West and its transformation, spanning from the Age of
+                                Discovery to the present.
+                            </p>
                         </div>
                         <div class="hotel_btn">
-                            <a href="https://www.klook.com/event-detail/101024001-2024-the-boyz-macau/?spm=Event_Vertical.AllEvent_LIST&clickId=0283573a4f"
+                            <a href="https://www.mgm.mo/en/cotai/entertainment/giraffe-meets-qilin"
                                 class="button_main">Buy Tickets CTA</a>
                         </div>
                     </div>
@@ -212,17 +222,22 @@
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="image/mikael.webp" alt="thessa"></div>
                         <div class="together"> <a
-                                href="https://www.londonermacao.com/macau-events-shows/linfeng-2024.html#:~:text=Famous%20Hong%20Kong%20singer%20and,and%2013%2D15%2C%202024.">
-                                <h3>Raymond Lam Concert 2024 | Love Flows LF Live 2024</h3>
-                                <span>📍The Londoner Macau
+                                href="https://www.mgm.mo/en/cotai/entertainment/arts-and-culture">
+                                <h3>’M ART - Arts and Culture Creative Experience
+                                </h3>
+                                <span>📍MGM Cotai
                                 </span>
-                                <p>📅7-8 September,13-15 September 2024</p>
+                                <p>📅 Year Round</p>
                             </a>
-                            <p>Raymond Lam brings his Love Flows show the the Londoner Macau for a selection of shows
-                                in September 2024. Dont miss out on one of the most iconic shows in Macau this year</p>
+                            <p>In MGM, art is everywhere. By co-curating with renowned artists from all over the world,
+                                MGM is dedicated to pioneer its unique road to art and to initiate inspirational
+                                dialogues
+                                through a multitude of artistic visions.</p>
+                            <p>MGM offers a range of activities including art tours and workshop to create a fun and
+                                inspiring cultural tourism experience.</p>
                         </div>
                         <div class="hotel_btn">
-                            <a href="https://www.londonermacao.com/macau-events-shows/linfeng-2024.html#:~:text=Famous%20Hong%20Kong%20singer%20and,and%2013%2D15%2C%202024."
+                            <a href="https://www.mgm.mo/en/cotai/entertainment/arts-and-culture"
                                 class="button_main">Buy Tickets CTA</a>
                         </div>
                     </div>
