--- a/exhibitions.html
+++ b/exhibitions.html
@@ -246,18 +246,23 @@
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="image/puerto.webp" alt="thessa"></div>
                         <div class="together"> <a
-                                href="https://www.klook.com/event-detail/101025451-2024-straykids-macau/?spm=Event_Vertical.AllEvent_LIST&clickId=401f9150ef">
-                                <h3>Stray Kids Concert 2024 Macau｜Stray Kids World Tour
-                                </h3>
-                                <span>📍Galaxy Macau</span>
-                                <p>📅29-30 November</p>
+                                href="https://www.mgm.mo/en/cotai/entertainment/sea-odyssey">
+                                <h3>Sea Odyssey</h3>
+                                <span>📍MGM Cotai
+                                </span>
+                                <p>📅 Year Round
+                                </p>
                             </a>
-                            <p>Stray Kids headline the galaxy theatre Macau with their eagerly awaited world tour
+                            <p>Dive into a magical ocean and meet our charming dolphins at the Sea Odyssey, as they
+                                prance and swim in this upbeat show under the Spectacle, submerge in the subaquatic
+                                environment with the world’s largest area of permanent indoor LED screens showcasing an
+                                array of underwater scenery.
+                                
                             </p>
 
                         </div>
                         <div class="hotel_btn">
-                            <a href="https://www.klook.com/event-detail/101025451-2024-straykids-macau/?spm=Event_Vertical.AllEvent_LIST&clickId=401f9150ef"
+                            <a href="https://www.mgm.mo/en/cotai/entertainment/sea-odyssey"
                                 class="button_main">Buy Tickets CTA</a>
                         </div>
                     </div>
