--- a/exhibitions.html
+++ b/exhibitions.html
@@ -221,8 +221,7 @@
                 <div class="col-12">
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="image/mikael.webp" alt="thessa"></div>
-                        <div class="together"> <a
-                                href="https://www.mgm.mo/en/cotai/entertainment/arts-and-culture">
+                        <div class="together"> <a href="https://www.mgm.mo/en/cotai/entertainment/arts-and-culture">
                                 <h3>’M ART - Arts and Culture Creative Experience
                                 </h3>
                                 <span>📍MGM Cotai
@@ -237,16 +236,15 @@
                                 inspiring cultural tourism experience.</p>
                         </div>
                         <div class="hotel_btn">
-                            <a href="https://www.mgm.mo/en/cotai/entertainment/arts-and-culture"
-                                class="button_main">Buy Tickets CTA</a>
+                            <a href="https://www.mgm.mo/en/cotai/entertainment/arts-and-culture" class="button_main">Buy
+                                Tickets CTA</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-12">
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="image/puerto.webp" alt="thessa"></div>
-                        <div class="together"> <a
-                                href="https://www.mgm.mo/en/cotai/entertainment/sea-odyssey">
+                        <div class="together"> <a href="https://www.mgm.mo/en/cotai/entertainment/sea-odyssey">
                                 <h3>Sea Odyssey</h3>
                                 <span>📍MGM Cotai
                                 </span>
@@ -257,13 +255,45 @@
                                 prance and swim in this upbeat show under the Spectacle, submerge in the subaquatic
                                 environment with the world’s largest area of permanent indoor LED screens showcasing an
                                 array of underwater scenery.
-                                
+
                             </p>
 
                         </div>
                         <div class="hotel_btn">
-                            <a href="https://www.mgm.mo/en/cotai/entertainment/sea-odyssey"
-                                class="button_main">Buy Tickets CTA</a>
+                            <a href="https://www.mgm.mo/en/cotai/entertainment/sea-odyssey" class="button_main">Buy
+                                Tickets CTA</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12">
+                    <div class="thessa-inner">
+                        <div class="img_transition"><img src="image/puerto.webp" alt="thessa"></div>
+                        <div class="together"> <a
+                                href="https://www.wynnresortsmacau.com/en/wynn-signature/2024-hypercar-exhibition">
+                                <h3>2024 Hypercar Exhibition
+                                </h3>
+                                <span>📍Wynn Signature
+                                </span>
+                                <p>📅 1st August-13th October
+                                </p>
+                            </a>
+                            <p>The Wynn Signature – 2024 Hypercar Exhibition returns with an unprecedented line-up of 30
+                                hypercars valued at a total of over HKD1.5 billion. These models include the
+                                track-focused
+                                Pagani Huayra R, known for its uncompromising performance; the limited-edition Aston
+                                Martin V12 Speedster, created to celebrate Aston Martin's 100th anniversary; and the
+                                Lamborghini Veneno Roadster, the most expensive car in Lamborghini's history with just 9
+                                vehicles produced worldwide. For a limited time only, come face to face with your
+                                ultimate
+                                dream cars in an immersive experience showcasing the pinnacle of engineering, speed and
+                                art, close-uP.
+                            </p>
+
+                        </div>
+                        <div class="hotel_btn">
+                            <a href="https://www.wynnresortsmacau.com/en/wynn-signature/2024-hypercar-exhibition"
+                                class="button_main">Buy
+                                Tickets CTA</a>
                         </div>
                     </div>
                 </div>
@@ -294,14 +324,15 @@
                         <h4 class="panel-title">
                             <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne"
                                 aria-expanded="false" aria-controls="collapseOne">
-                                What types of events can I find on TicketsMacau?</a>
+                                What types of exhibitions can I find on TicketsMacau?</a>
                         </h4>
                     </div>
                     <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel"
                         aria-labelledby="headingOne">
                         <div class="panel-body">
-                            You can find a wide range of events, including concerts, theatrical performances, casino
-                            tournaments, and cultural tours, all hosted in Macau’s premier venues.</div>
+                            You can explore a wide range of exhibitions, including art displays, historical showcases,
+                            interactive installations, and cultural exhibitions, all hosted across various venues in
+                            Macau.</div>
                     </div>
                 </div>
                 <div class="panel panel-default">
@@ -309,15 +340,15 @@
                         <h4 class="panel-title">
                             <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion"
                                 href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                How can I purchase tickets for events?
+                                How can I purchase tickets for exhibitions?
+
                             </a>
                         </h4>
                     </div>
                     <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
                         <div class="panel-body">
                             Tickets can be purchased through our site by following the event links to the respective
-                            ticKeting platforms or directly through event organizers.
-
+                            ticketing platforms or directly through exhibition organizers.
                         </div>
                     </div>
                 </div>
@@ -326,16 +357,15 @@
                         <h4 class="panel-title">
                             <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion"
                                 href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                Are event details and schedules always up-to-date?
-
-                            </a>
+                                Are exhibition details and schedules always accurate?</a>
                         </h4>
                     </div>
                     <div id="collapseThree" class="panel-collapse collapse" role="tabpanel"
                         aria-labelledby="headingThree">
                         <div class="panel-body">
-                            We strive to provide accurate and current information, but event details and schedules may
-                            change. We recommend checking directly with the event organizers for the latest updates.
+                            We strive to provide up-to-date information, but exhibition details and schedules may
+                            change. For the latest updates, please check directly with the exhibition organizers.
+
                         </div>
                     </div>
                 </div>
@@ -344,16 +374,16 @@
                         <h4 class="panel-title">
                             <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion"
                                 href="#collapsefour" aria-expanded="false" aria-controls="collapsefour">
-                                Can I get a refund if I can’t attend an event?
+                                What should I do if I need a refund for an exhibition ticket?
                             </a>
                         </h4>
                     </div>
                     <div id="collapsefour" class="panel-collapse collapse" role="tabpanel"
                         aria-labelledby="headingfour">
                         <div class="panel-body">
-                            Refund policies vary by event and ticketing provider. Please review the terms and conditions
-                            at the time of purchase and contact the ticketing provider for assistance with refunds or
-                            exchanges.</div>
+                            Refund policies vary by exhibition and ticket provider. Please review the terms and
+                            conditions at the time of purchase and contact the ticketing provider for assistance with
+                            refunds or exchanges.</div>
                     </div>
                 </div>
                 <div class="panel panel-default">
@@ -361,16 +391,16 @@
                         <h4 class="panel-title">
                             <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion"
                                 href="#collapsefive" aria-expanded="false" aria-controls="collapsefive">
-                                How do I find out about new events and updates?
+                                How can I stay informed about new exhibitions and updates?
+
                             </a>
                         </h4>
                     </div>
                     <div id="collapsefive" class="panel-collapse collapse" role="tabpanel"
                         aria-labelledby="headingfive">
                         <div class="panel-body">
-                            Stay updated by subscribing to our newsletter or following our social media channels for the
-                            latest news and announcements on upcoming events in Macau.
-                        </div>
+                            Keep up with the latest exhibitions by subscribing to our newsletter or following our social
+                            media channels for news and announcements on upcoming exhibitions in Macau.</div>
                     </div>
                 </div>
             </div>
@@ -390,7 +420,8 @@
                         recommend verifying event details directly with the event organizers or venues before making any
                         plans or purchases.
                         TicketsMacau is not responsible for any discrepancies or issues arising from the use of the
-                        information on this site.</p>
+                        information on this site.
+                    </p>
                 </div>
             </div>
         </div>
