--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
                     <ul>
                         <li>
                             <a href="hotel.html">
-                                hotely</a>
+                                Hotels</a>
                         </li>
                         <li>
-                            <a href="resorts.html">
-                                Strediská</a>
+                            <a href="shows.html">
+                               Shows</a>
                         </li>
                         <li>
                             <a href="spa.html">Kúpele</a>
