--- a/hotel.html
+++ b/hotel.html
@@ -92,17 +92,18 @@
                 <div class="col-12">
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="image/seikkailu.webp" alt="thessa"></div>
-                        <div class="together"> <a
-                                href="https://www.galaxymacau.com/offers/entertainment/gem-i-am-gloria-world-tour-macau/">
+                        <div class="together"> <a href="https://www.venetianmacao.com/">
                                 <h3>The Venetian Macao
                                 </h3>
                                 <ul>
                                     <li>Large luxury resort</li>
                                     <li>themed shopping mall</li>
+                                    <li>canal rides</li>
+                                    <li>Casino Room</li>
                                 </ul>
                         </div>
                         <div class="hotel_btn">
-                            <a href="https://www.cityline.com/Events.html" class="button_main">Buy Tickets CTA</a>
+                            <a href="https://www.venetianmacao.com/" class="button_main">Buy Tickets CTA</a>
                         </div>
                     </div>
                 </div>
@@ -111,14 +112,13 @@
                         <div class="img_transition"><img src="image/taalla.webp" alt="thessa"></div>
                         <div class="together"> <a
                                 href="https://www.galaxymacau.com/offers/entertainment/rene-final-call-2024-live-tour-macau/">
-                                <h3>René [Final Call] 2024 Live Tour-Macau</h3>
-                                <span>📍Galaxy Macau</span>
-                                <p>📅17th August 2024</p>
-                            </a>
-                            <p>René Liu, the Diva of Arts, will extend her stunning 2023 Final Call World Tour into
-                                2024,
-                                introducing the Final Call World Tour with an all-encompassing stage experience.
-                            </p>
+                                <h3>City of Dreams</h3>
+                                <ul>
+                                    <li>Integrated resort with a casino</li>
+                                    <li>multiple hotels (Grand Hyatt, Crown Towers, Morpheus)</li>
+                                    <li>Shopping Mall</li>
+                                    <li> Entertainment Venues</li>
+                                </ul>
                         </div>
                         <div class="hotel_btn">
                             <a href="https://www.galaxymacau.com/offers/entertainment/rene-final-call-2024-live-tour-macau/"
