--- a/hotel.html
+++ b/hotel.html
@@ -110,8 +110,7 @@
                 <div class="col-12">
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="image/taalla.webp" alt="thessa"></div>
-                        <div class="together"> <a
-                                href="https://www.galaxymacau.com/offers/entertainment/rene-final-call-2024-live-tour-macau/">
+                        <div class="together"> <a href="https://www.cityofdreamsmanila.com/en">
                                 <h3>City of Dreams</h3>
                                 <ul>
                                     <li>Integrated resort with a casino</li>
@@ -121,8 +120,7 @@
                                 </ul>
                         </div>
                         <div class="hotel_btn">
-                            <a href="https://www.galaxymacau.com/offers/entertainment/rene-final-call-2024-live-tour-macau/"
-                                class="button_main">Buy Tickets CTA</a>
+                            <a href="https://www.cityofdreamsmanila.com/en" class="button_main">Buy Tickets CTA</a>
                         </div>
                     </div>
                 </div>
@@ -131,13 +129,12 @@
                         <div class="img_transition"><img src="image/seitseman.jpg" alt="thessa"></div>
                         <div class="together"> <a
                                 href="https://www.galaxymacau.com/offers/entertainment/tomorrow-x-together-world-tour-macau/">
-                                <h3>TOMORROW X TOGETHER WORLD TOUR <ACT:PROMISE> IN MACAU </h3>
-                                <span>📍Galaxy Macau</span>
-                                <p>📅30th-31st August 2024</p>
-                            </a>
-                            <p>TOMORROW X TOGETHER, featuring SOOBIN, YEONJUN, BEOMGYU, TAEHYUN, and
-                                HUENINGKAI, have cemented their status as Gen Z icons with a powerful soundtrack that
-                                captures the shared experiences and emotions of today’s generation.</p>
+                                <h3>Wynn Palace</h3>
+                                <ul>
+                                    <li>Luxury resort and casino</li>
+                                    <li>Performance lake</li>
+                                    <li>Upscale amenities.</li>
+                                </ul>
                         </div>
                         <div class="hotel_btn">
                             <a href="https://www.galaxymacau.com/offers/entertainment/tomorrow-x-together-world-tour-macau/"
