--- a/hotel.html
+++ b/hotel.html
@@ -128,7 +128,7 @@
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="image/seitseman.jpg" alt="thessa"></div>
                         <div class="together"> <a
-                                href="https://www.galaxymacau.com/offers/entertainment/tomorrow-x-together-world-tour-macau/">
+                                href="https://www.wynnresortsmacau.com/en/wynn-palace">
                                 <h3>Wynn Palace</h3>
                                 <ul>
                                     <li>Luxury resort and casino</li>
@@ -137,7 +137,7 @@
                                 </ul>
                         </div>
                         <div class="hotel_btn">
-                            <a href="https://www.galaxymacau.com/offers/entertainment/tomorrow-x-together-world-tour-macau/"
+                            <a href="https://www.wynnresortsmacau.com/en/wynn-palace"
                                 class="button_main">Buy Tickets CTA</a>
                         </div>
                     </div>
