--- a/hotel.html
+++ b/hotel.html
@@ -127,8 +127,7 @@
                 <div class="col-12">
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="image/seitseman.jpg" alt="thessa"></div>
-                        <div class="together"> <a
-                                href="https://www.wynnresortsmacau.com/en/wynn-palace">
+                        <div class="together"> <a href="https://www.wynnresortsmacau.com/en/wynn-palace">
                                 <h3>Wynn Palace</h3>
                                 <ul>
                                     <li>Luxury resort and casino</li>
@@ -137,8 +136,8 @@
                                 </ul>
                         </div>
                         <div class="hotel_btn">
-                            <a href="https://www.wynnresortsmacau.com/en/wynn-palace"
-                                class="button_main">Buy Tickets CTA</a>
+                            <a href="https://www.wynnresortsmacau.com/en/wynn-palace" class="button_main">Buy Tickets
+                                CTA</a>
                         </div>
                     </div>
                 </div>
@@ -147,19 +146,12 @@
                         <div class="img_transition"><img src="image/jaaulla.avif" alt="thessa"></div>
                         <div class="together"> <a
                                 href="https://www.galaxymacau.com/offers/entertainment/2024-gi-dle-world-tour-idol-macau/">
-                                <h3>2024 (G)I-DLE WORLD TOUR [iDOL] IN MACAU
-                                </h3>
-                                <span>📍Galaxy Macau</span>
-                                <p>📅25-27 October 2024</p>
-                            </a>
-                            <p>(G)I-DLE, comprised of MIYEON, MINNIE, SOYEON, YUQI, and SHUHUA, made a
-                                remarkable debut in May 2018 with their hit song "LATATA," quickly gaining acclaim and
-                                winning seven "Best New Artist" awards. Known as one of the most high-profile girl
-                                groups,
-                                they continued their success in 2022 with chart-topping hits like "TOMBOY," "Nxde," and
-                                the
-                                highly addictive "Queencard," which topped global charts.
-                            </p>
+                                <h3>Wynn Macau</h3>
+                                <ul>
+                                    <li>High-end casino resort</li>
+                                    <li>Luxury accommodations</li>
+                                    <li>Michelin Star Dining</li>
+                                </ul>
                         </div>
                         <div class="hotel_btn">
                             <a href="https://www.galaxymacau.com/offers/entertainment/2024-gi-dle-world-tour-idol-macau/"
