--- a/hotel.html
+++ b/hotel.html
@@ -145,7 +145,7 @@
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="image/jaaulla.avif" alt="thessa"></div>
                         <div class="together"> <a
-                                href="https://www.galaxymacau.com/offers/entertainment/2024-gi-dle-world-tour-idol-macau/">
+                                href="https://www.wynnresortsmacau.com/en/wynn-macau">
                                 <h3>Wynn Macau</h3>
                                 <ul>
                                     <li>High-end casino resort</li>
@@ -154,7 +154,7 @@
                                 </ul>
                         </div>
                         <div class="hotel_btn">
-                            <a href="https://www.galaxymacau.com/offers/entertainment/2024-gi-dle-world-tour-idol-macau/"
+                            <a href="https://www.wynnresortsmacau.com/en/wynn-macau"
                                 class="button_main">Buy Tickets CTA</a>
                         </div>
                     </div>
