--- a/hotel.html
+++ b/hotel.html
@@ -144,8 +144,7 @@
                 <div class="col-12">
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="image/jaaulla.avif" alt="thessa"></div>
-                        <div class="together"> <a
-                                href="https://www.wynnresortsmacau.com/en/wynn-macau">
+                        <div class="together"> <a href="https://www.wynnresortsmacau.com/en/wynn-macau">
                                 <h3>Wynn Macau</h3>
                                 <ul>
                                     <li>High-end casino resort</li>
@@ -154,48 +153,42 @@
                                 </ul>
                         </div>
                         <div class="hotel_btn">
-                            <a href="https://www.wynnresortsmacau.com/en/wynn-macau"
-                                class="button_main">Buy Tickets CTA</a>
+                            <a href="https://www.wynnresortsmacau.com/en/wynn-macau" class="button_main">Buy Tickets
+                                CTA</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-12">
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="image/pubdistus.webp" alt="thessa"></div>
-                        <div class="together"> <a
-                                href="https://www.klook.com/event-detail/101024001-2024-the-boyz-macau/?spm=Event_Vertical.AllEvent_LIST&clickId=0283573a4f">
-                                <h3>2024 THE BOYZ WORLD TOUR : ZENERATION II in MACAU
-                                </h3>
-                                <span>📍Studio City Event Center</span>
-                                <p>📅31 August-1 September 2024</p>
-                            </a>
-                            <p>The boyz world tour visits the Studio City Event Centre and promises to be one of the
-                                most
-                                memorable concerts of the year. Showcasing chart topping hits this show isn't to be
-                                missed.</p>
+                        <div class="together"> <a href="https://www.mgm.mo/en/cotai">
+                                <h3>MGM Cotai</h3>
+                                <ul>
+                                    <li>Modern resort with a casino</li>
+                                    <li>Art installations</li>
+                                    <li>Gourmet dining options</li>
+                                </ul>
                         </div>
                         <div class="hotel_btn">
-                            <a href="https://www.klook.com/event-detail/101024001-2024-the-boyz-macau/?spm=Event_Vertical.AllEvent_LIST&clickId=0283573a4f"
-                                class="button_main">Buy Tickets CTA</a>
+                            <a href="https://www.mgm.mo/en/cotai" class="button_main">Buy Tickets CTA</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-12">
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="image/mikael.webp" alt="thessa"></div>
-                        <div class="together"> <a
-                                href="https://www.londonermacao.com/macau-events-shows/linfeng-2024.html#:~:text=Famous%20Hong%20Kong%20singer%20and,and%2013%2D15%2C%202024.">
-                                <h3>Raymond Lam Concert 2024 | Love Flows LF Live 2024</h3>
-                                <span>📍The Londoner Macau
-                                </span>
-                                <p>📅7-8 September,13-15 September 2024</p>
+                        <div class="together"> <a href="https://www.mgm.mo/">
+                                <h3>MGM Macau
+                                </h3>
+                                <ul>
+                                    <li>Grand casino</li>
+                                    <li>Retail Stores</li>
+                                    <li>Exquisite Dining Options</li>
+                                </ul>
                             </a>
-                            <p>Raymond Lam brings his Love Flows show the the Londoner Macau for a selection of shows
-                                in September 2024. Dont miss out on one of the most iconic shows in Macau this year</p>
                         </div>
                         <div class="hotel_btn">
-                            <a href="https://www.londonermacao.com/macau-events-shows/linfeng-2024.html#:~:text=Famous%20Hong%20Kong%20singer%20and,and%2013%2D15%2C%202024."
-                                class="button_main">Buy Tickets CTA</a>
+                            <a href="https://www.mgm.mo/" class="button_main">Buy Tickets CTA</a>
                         </div>
                     </div>
                 </div>
@@ -204,13 +197,12 @@
                         <div class="img_transition"><img src="image/puerto.webp" alt="thessa"></div>
                         <div class="together"> <a
                                 href="https://www.klook.com/event-detail/101025451-2024-straykids-macau/?spm=Event_Vertical.AllEvent_LIST&clickId=401f9150ef">
-                                <h3>Stray Kids Concert 2024 Macau｜Stray Kids World Tour
-                                </h3>
-                                <span>📍Galaxy Macau</span>
-                                <p>📅29-30 November</p>
-                            </a>
-                            <p>Stray Kids headline the galaxy theatre Macau with their eagerly awaited world tour
-                            </p>
+                                <h3>Grand Lisboa</h3>
+                                <ul>
+                                    <li>Iconic casino hotel</li>
+                                    <li>Large casino</li>
+                                    <li>Various dining and entertainment options.</li>
+                                </ul>
 
                         </div>
                         <div class="hotel_btn">
