--- a/hotel.html
+++ b/hotel.html
@@ -196,7 +196,7 @@
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="image/puerto.webp" alt="thessa"></div>
                         <div class="together"> <a
-                                href="https://www.klook.com/event-detail/101025451-2024-straykids-macau/?spm=Event_Vertical.AllEvent_LIST&clickId=401f9150ef">
+                                href="https://www.grandlisboa.com/en">
                                 <h3>Grand Lisboa</h3>
                                 <ul>
                                     <li>Iconic casino hotel</li>
@@ -206,7 +206,7 @@
 
                         </div>
                         <div class="hotel_btn">
-                            <a href="https://www.klook.com/event-detail/101025451-2024-straykids-macau/?spm=Event_Vertical.AllEvent_LIST&clickId=401f9150ef"
+                            <a href="https://www.grandlisboa.com/en"
                                 class="button_main">Buy Tickets CTA</a>
                         </div>
                     </div>
